--- a/arlecchino.css
+++ b/arlecchino.css
@@ -7,7 +7,7 @@
 * @donate https://ko-fi.com/nyria
 */
 
-@import "https://comfy-themes.github.io/Discord/betterdiscord/main.css";
+@import "https://raw.githubusercontent.com/Dev-Supremaker/Discord/refs/heads/master/betterdiscord/main.css";
 
 /* ═══════『 ⚠️・Important tips 』═══════
 *
