--- a/system24+-gold.css
+++ b/system24+-gold.css
@@ -235,7 +235,7 @@
 */
 
 /* import theme modules */
-@import url('https://refact0r.github.io/system24/build/system24.css');
+@import url('https://raw.githubusercontent.com/refact0r/system24/refs/heads/main/theme/system24.theme.css);
 
 body {
     /* font, change to '' for default discord font */
